--- a/Bugbear.TinkerPop.Tests/Bugbear.TinkerPop.Tests.csproj
+++ b/Bugbear.TinkerPop.Tests/Bugbear.TinkerPop.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bugbear.Graph\Bugbear.Graph.csproj" />
     <ProjectReference Include="..\Bugbear.TinkerPop\Bugbear.TinkerPop.csproj" />
   </ItemGroup>
 
