--- a/Bugbear.Graph/Bugbear.Graph.csproj
+++ b/Bugbear.Graph/Bugbear.Graph.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.347.0</Version>
+    <Description>Bugbear is a wrapper library for Gremlin.Net 3.4.7. Bugbear.Graph provides a native .NET graph database.</Description>
+    <RepositoryUrl>https://github.com/zebmason/Bugbear</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Gremlin;Gremlin.Net</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
