--- a/Bugbear.TinkerPop/Bugbear.TinkerPop.csproj
+++ b/Bugbear.TinkerPop/Bugbear.TinkerPop.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.347.0</Version>
+    <Description>Bugbear is a wrapper library for Gremlin.Net 3.4.7. Bugbear.Tinkerpop provides standard Tinkerpop graphs.</Description>
+    <RepositoryUrl>https://github.com/zebmason/Bugbear</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Gremlin;Gremlin.Net</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
