Finish pulling Gremlin.Net into the build

--- a/Bugbear.Core/Bugbear.Core.csproj
+++ b/Bugbear.Core/Bugbear.Core.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gremlin.Net" Version="3.4.7" />
+    <ProjectReference Include="..\Bugbear.Gremlin.Net\Bugbear.Gremlin.Net.csproj" />
   </ItemGroup>
 
 </Project>
