--- a/Bugbear.Gremlin.Net/Bugbear.Gremlin.Net.csproj
+++ b/Bugbear.Gremlin.Net/Bugbear.Gremlin.Net.csproj
@@ -1,4 +1,6 @@
 <!--
+N.B. Forked from tagged version 3.4.7 by https://github.com/zebmason.
+
 Licensed to the Apache Software Foundation (ASF) under one or more
 contributor license agreements.  See the NOTICE file distributed with
 this work for additional information regarding copyright ownership.
@@ -19,43 +21,26 @@ limitations under the License.
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Build">
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
-    <Version>3.4.7</Version>
+    <Version>0.347.0</Version>
     <FileVersion>3.4.7.0</FileVersion>
     <AssemblyVersion>3.4.0.0</AssemblyVersion>
     <Title>Gremlin.Net</Title>
     <Authors>Apache TinkerPop</Authors>
-    <Description>Gremlin.Net for Apache TinkerPop™ is a language variant and driver for .NET.
-
-Apache TinkerPop™ is a graph computing framework for both graph databases (OLTP) and graph analytic systems (OLAP). Gremlin is the graph traversal language of TinkerPop. It can be described as a functional, data-flow language that enables users to succinctly express complex traversals on (or queries of) their application's property graph.
-
-Gremlin.Net implements Gremlin within .NET. C# syntax has the same constructs as Java including "dot notation" for function chaining (a.b.c), round bracket function arguments (a(b,c)), and support for global namespaces (a(b()) vs a(__.b())). As such, anyone familiar with Gremlin-Java will immediately be able to work with Gremlin.Net. Moreover, there are a few added constructs to Gremlin.Net that make traversals a bit more succinct.
-
-Gremlin.Net is designed to connect to a "server" that is hosting a TinkerPop-enabled graph system. That "server" could be Gremlin Server
-
-http://tinkerpop.apache.org/docs/current/reference/#gremlin-server
-
-or a remote graph provider that exposes protocols by which Gremlin.Net can connect.
-
-Please see the reference documentation of Apache TinkerPop for more information on usage: https://s.apache.org/pgbwu
-
-and use our Google Group gremlin-users if there are any questions: https://s.apache.org/c8hru
-
-NOTE that versions suffixed with "-rc" are considered release candidates (i.e. pre-alpha, alpha, beta, etc.) and thus for early testing purposes only.</Description>
-    <AssemblyOriginatorKeyFile>../../build/tinkerpop.snk</AssemblyOriginatorKeyFile>
+    <Description>Bugbear.Gremlin.Net is a minor fork of Gremlin.Net, https://github.com/apache/tinkerpop, to allow for overriding of certain GraphTraversal and GraphTraversalSource methods.</Description>
     <SignAssembly>true</SignAssembly>
     <PackageId>Gremlin.Net</PackageId>
     <PackageTags>gremlin;tinkerpop;apache</PackageTags>
-    <PackageProjectUrl>http://tinkerpop.apache.org</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/zebmason/Bugbear</PackageProjectUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageIcon>gremlin-dotnet-logo_256x256.png</PackageIcon>
     <PackageIconUrl>http://tinkerpop.apache.org/docs/current/images/gremlin-dotnet-logo_256x256.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/apache/tinkerpop</RepositoryUrl>
+    <RepositoryUrl>https://github.com/zebmason/Bugbear</RepositoryUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>    
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
@@ -73,9 +58,9 @@ NOTE that versions suffixed with "-rc" are considered release candidates (i.e. p
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../../LICENSE" Pack="true" PackagePath=""/>
-    <None Include="../../NOTICE" Pack="true" PackagePath=""/>
-    <None Include="../../../docs/static/images/gremlin-dotnet-logo_256x256.png" Pack="true" PackagePath="\"/>
+    <None Include="LICENSE" Pack="true" PackagePath=""/>
+    <None Include="NOTICE" Pack="true" PackagePath=""/>
+    <None Include="gremlin-dotnet-logo_256x256.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
